# runtime-pointer-disambiguation

./: .gitignore  build-llvm.sh  configure-hybridalias.sh  notes.txt  proposal.txt
HybridAlias/: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README  aggregate-alias-trace  aggregate-alias-trace.py  aggregate-time-and-alias-trace
HybridAlias/RC/: AliasInstrumentRegion.cpp  CMakeLists.txt  CloneRegion.h  Makefile  PerfInstrumentRegions.cpp  RegionPass.cpp  perflib.cpp  perflib.h
HybridAlias/benchmark/: CMakeLists.txt  a.c  b.cpp  b.cpp.base-ptrs.yaml  bad_alias.cpp  bad_alias.cpp.base-ptrs.yaml  bar.c  bench_util.cpp  bench_util.hpp  benchmark.cpp  check-base-ptrs  copy.cpp  copy.cpp.base-ptrs.yaml  dotprod.cpp  dotprod.cpp.base-ptrs.yaml  double_memset.cpp  double_memset.cpp.base-ptrs.yaml  fft.cpp  foo.c  matmul_func.c  matmul_novec.c  sum.cpp  test1.c  test2.c  yamleq
HybridAlias/doc/: readme.tex
HybridAlias/google-benchmark/: .gitignore  CMakeLists.txt
HybridAlias/google-benchmark/src/: CMakeLists.txt
HybridAlias/ilc/: BasePtrInfo.cpp  BasePtrInfo.h  BasePtrInfo.hpp  CMakeLists.txt  Canonicalize.cpp  Common.cpp  Common.h  FullInstNamer.cpp  FullInstNamer.h  ILC.cpp  ILC.hpp  ILCWrapper.cpp  MallocBoundsTracer.cpp  PerfInstrumentRegions.cpp  PrintBasePtrs.cpp  TraceLoopAlias.cpp  TraceLoopAliasWrapper.cpp  YamlUtils.cpp  YamlUtils.h  perflib.cpp  perflib.h
HybridAlias/instrumentation/: CMakeLists.txt  InstrumentLoop.cpp
HybridAlias/runtime/: CMakeLists.txt  alias_tracing.cpp  alias_tracing.hpp  alloc.h
Tiling/: .gitignore  test-log.sh  test.sh
Tiling/bench/jacobi3d/: Makefile  helper.h  input.h  jacobi3d.cc  jacobi3d_generated.h  jacobi3d_generated_my.cc  jacobi3d_generator.cc  memcpy.cc  memcpy.h
Tiling/bench/must-dep/: Makefile  must-dep-tst.cpp  wavelets_my.c
Tiling/llvm-passes/: CMakeLists.txt
Tiling/llvm-passes/Common/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  IntervalTree.cpp  IntervalTree.h  Node.cpp  Node.h  ParseTools.cpp  ParseTools.h  PassTools.cpp  PassTools.h  StringTools.cpp  StringTools.h  Tools.hpp
Tiling/llvm-passes/TileGraph/: CMakeLists.txt  ScheduleHeuristic.cpp  ScheduleHeuristic.h  TileGraph.cpp  TileHeuristic.cpp  TileHeuristic.h
Tiling/llvm-passes/TileLoop/: CMakeLists.txt  Tile.cpp  Tile.h  TileLoop.cpp  Tiling.cpp  Tiling.h
Tiling/llvm-passes/TileUnroll/: CMakeLists.txt  TileUnroll.cpp
alias_profiler/: CMakeLists.txt
alias_profiler/src/: CMakeLists.txt  alias_profiler.c  alias_profiler.h  memtrack.c  memtrack.h  misc.c  misc.h  rb_tree.inc
alias_profiler/test/: CMakeLists.txt  align_test.c  smoke_test.c  test.c  test.h
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/lib/Analysis/: BasePointers.cpp  CMakeLists.txt  DominanceFrontier.cpp  LoopInfo.cpp  ScalarEvolution.cpp  ScalarEvolutionExpander.cpp
llvm/lib/IR/: BasicBlock.cpp
llvm/lib/Support/: CMakeLists.txt  CorseCommon.cpp
llvm/tools/: CMakeLists.txt  Makefile
llvm/tools/alias-instrument/: CMakeLists.txt  Makefile  alias_instrument.cpp
llvm/tools/alias-profiler/: CMakeLists.txt  alias_profiler.cpp  alias_profiler.h  bootstrap_allocator.hpp
llvm/tools/canonicalize/: CMakeLists.txt  LLVMBuild.txt  Makefile  canonicalize.cpp
llvm/tools/perf-instrument-regions/: CMakeLists.txt  PerfInstrumentRegions.cpp  perflib.cpp  perflib.h
tests/: .gitignore  aggregate_aa_eval.py  avg.py  bad-alias  bad-alias-gen-ll.sh  bad-alias.bc  bad-alias.c  bad-alias.cpp  bad-alias.ll  bad-alias.s  bench-all-the-things!.sh  bench-profiling-common.sh  bench-profiling-polybench3.sh  bench-profiling-polybench4.sh  bench-profiling-rodinia-sequential.sh  benchmark_log_2_csv.py  constant-loop.cpp  count_alias_profiling_results.py  licm-alias-gen-ll.sh  licm-alias.cpp  load-on-bound.cpp  parse-lnt.py  run-lnt.sh
tests/NPB3.3-SER-C/: run.sh
tests/NPB3.3-SER-C/BT/: icc-time  out-rhs  pt-report-phase6
tests/NPB3.3-SER-C/CG/: npbparams.h
tests/NPB3.3-SER-C/CG_mod/: cg.c
tests/NPB3.3-SER-C/DC_mod/: adc.c  extbuild.c
tests/NPB3.3-SER-C/EP/: npbparams.h
tests/NPB3.3-SER-C/FT/: npbparams.h
tests/NPB3.3-SER-C/IS/: npbparams.h
tests/NPB3.3-SER-C/MG/: genrun_matmul.sh  mg.c  mg.pluto.c  mg_bak1.c  mg_bak_latest.c  mg_fused.c  mg_resid.pluto.c  mg_resid.pluto.pluto.c  mg_resid_tiled.c  mg_trad.c  mg_trad.pluto.c  npbparams.h  tile.sizes
tests/NPB3.3-SER-C/UA/: npbparams.h
tests/NPB3.3-SER-C/bin-llvm-noinline-clean/: cg.A.x  cg.B.x  cg.C.x  cg.S.x  cg.W.x  dc.A.x  dc.B.x  dc.S.x  dc.W.x  ep.A.x  ep.B.x  ep.C.x  ep.S.x  ep.W.x  ft.A.x  ft.B.x  ft.S.x  ft.W.x  is.B.x  is.C.x  is.W.x  mg.A.x  mg.B.x  mg.S.x  mg.W.x  ua.A.x  ua.B.x  ua.C.x  ua.S.x  ua.W.x
tests/NPB3.3-SER-C/bin-llvm-noinline-opt/: cg.A.x  cg.B.x  cg.C.x  cg.S.x  cg.W.x  dc.A.x  dc.B.x  dc.S.x  dc.W.x  ep.A.x  ep.B.x  ep.C.x  ep.S.x  ep.W.x  ft.A.x  ft.B.x  ft.S.x  ft.W.x  is.A.x  is.S.x  mg.A.x  mg.B.x  mg.S.x  mg.W.x  ua.A.x  ua.B.x  ua.C.x  ua.S.x  ua.W.x
tests/NPB3.3-SER-C/bin-llvm-opt/: cg.A.x  cg.B.x  cg.C.x  cg.S.x  cg.W.x  dc.A.x  dc.B.x  dc.S.x  dc.W.x  ep.A.x  ep.B.x  ep.C.x  ep.S.x  ep.W.x  ft.A.x  ft.B.x  ft.S.x  ft.W.x  is.A.x  is.B.x  is.C.x  is.S.x  is.W.x  mg.A.x  mg.B.x  mg.S.x  mg.W.x  ua.A.x  ua.B.x  ua.C.x  ua.S.x  ua.W.x
tests/NPB3.3-SER-C/bin-opt/: cg.A.x  cg.B.x  cg.C.x  cg.S.x  cg.W.x  dc.A.x  dc.B.x  dc.S.x  dc.W.x  ua.A.x  ua.B.x  ua.C.x  ua.S.x  ua.W.x
tests/NPB3.3-SER-C/common/: pt-report-phase6
tests/NPB3.3-SER-C/config/: clean_make.def  clean_openmp_make.def  llvm_clean_make.def  llvm_noinline_clean_make.def  llvm_noinline_opt_make.def  llvm_opt_make.def  make.def  opt_make.def  opt_openmp_make.def
tests/llvm-test-suite/: filepp
tests/lnt/LNT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/opencv/: build-cmd.txt
tests/opencv/opencv-2.4.10-src/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  OpenCVConfig.cmake  build.xml  (+5 more)
tests/polybench-c-3.2/: a.out  count-bad-alias.sh
tests/polybench-c-4.0/: run.sh
tests/ptrdist-1.1/: Makefile-original  aux-exec.sh  aux-parse-result.py  run.sh
(+3507 files in other folders)
